# auditor-expert

./: .gitignore  MODEL_SELECTION_FRAMEWORK.md  README.md  pyproject.toml
diagnostics/: tsne_viz.py
evaluation/: benchmark.py  eval.py  tests_auditor.jsonl  tests_external.jsonl
knowledge-base/markdown/: README.md
scripts/: answer.py  app.py  ingest.py
scripts/diagnostics/: sc_viz.py  tsne_viz.py
